# reportauto_lacicra

./: .env.template  .gitignore  ACHIEVEMENTS.md  README.md  main_1_lacicra.py  main_2_evening_post.py  main_2_morning_post.py  main_lacicra.py  main_morning_post.py  pyproject.toml
.github/workflows/: ci.yml
common/: data_converter.py  data_loader.py  data_normalizer.py  log_handler.py  pydantic_data_conv.py
config/: .env.template  service_account_README.md  settings.py
main_py/: 20251003_reportauto_lacicra_refa.py
main_py/modules/: data_converter.py  data_io.py  log_handler.py  webui.py
services/: lacicra_service.py  slack_service.py
tests/: test_converter.py  test_lacicra_service.py  test_loader.py  test_normalizer.py
